--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mssql;Database=ProjektPlanungDB;User Id=sa;Password=StrongPassword123!;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
