--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,13 +1,13 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 COPY ["Backend/Backend.csproj", "Backend/"]
-RUN dotnet restore "Backend/Backend.csproj" -f net9.0
+RUN dotnet restore "Backend/Backend.csproj"
 COPY . .
 WORKDIR "/src/Backend"
-RUN dotnet build "Backend.csproj" -c Release -f net9.0 -o /app/build
+RUN dotnet build "Backend.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Backend.csproj" -c Release -f net9.0 -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Backend.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
